[package]
name = "zk-tlock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false, optional = true }
ark-relations = { version = "^0.3.0", default-features = false, optional = true}
ark-groth16 = { version = "^0.3.0", features = ["r1cs", "std"] }
ark-sponge = { version = "^0.3.0" , features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-nonnative-field = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", features = [ "curve", "scalar_field" ] }
ark-bls12-377 = { version = "0.3.0" , features = [ "r1cs" ] }
ark-bw6-761 = "0.3.0"

pretty_env_logger = "0.4.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

json = "0.12.4"
lazy_static = "^1.4.0"
serde_json = "1.0.82"
hex = "0.4.3"

sha2 = "0.9"
group = "0.12"
bls12_381_plus = { version = "0.7.0", features = ["groups", "expose-fields"] }
tlock = {path = "../rs-drand-tlock/tlock"}

[dev-dependencies]
criterion = "0.4"

[[bench]]
harness = false
name = "ibe_benchmark"

[features]
default = [ "std", "parallel", "r1cs" ]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std", "ark-serialize/std" ]
r1cs = [ "ark-relations", "ark-r1cs-std" ]
parallel = [ "std", "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel"]


[profile.dev.package."*"]
opt-level = 3
