[package]
name = "zk-tlock"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false}
ark-std = { version = "^0.3.0", default-features = false }
ark-snark = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
ark-groth16 = { version = "^0.3.0", features = ["r1cs", "std"] }
ark-gemini = { git = "https://github.com/arkworks-rs/gemini"  }
ark-sponge = { version = "^0.3.0" , features = ["r1cs"] }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-bls12-381 = { version = "^0.3.0", features = [ "curve", "scalar_field" ] }
ark-bls12-377 = { version = "0.3.0" , features = [ "r1cs" ] }
ark-bw6-761 = "0.3.0"
rayon = { version = "1", optional = true }

pretty_env_logger = "0.4.0"
tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

lazy_static = "^1.4.0"
hex = "0.4.3"

sha2 = "0.9"
group = "0.12"
bls12_381_plus = { version = "0.7.0", features = ["groups", "expose-fields"] }
itertools = "0.10"

[dev-dependencies]
ark-relations = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }
ark-algebra-test-templates = { version = "^0.3.0", default-features = false }

[[bench]]
harness = false
name = "ibe_benchmark"

[features]
default = [ "curve" ]
std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-gemini/std"]
parallel = [ "ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-gemini/parallel" ]

curve = [ "scalar_field", "base_field" ]
scalar_field = []
base_field = []

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true

# In of build errors check if `sync-algebra` branch exits for `arkwroks-rs/groth16` and ``arkwroks-rs/snark` repos.
# If no consider taking the earliest revision after it's merging :)
[patch.crates-io]
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", rev = "4fbdc2b6a5c27aebd7210b34fa25575309494cdf" }
ark-std = { git = "https://github.com/arkworks-rs/std", rev = "7019830e89b69aca059ce7848e53bd99a09efbab" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", branch = "sync-algebra" }
ark-gemini = { git = "https://github.com/arkworks-rs/gemini", rev = "39baec0cc7f614c6ef62efc3b837c447049a0570"}
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", rev = "efefa209d677813c9b30ee4a0763b3f63abdeceb" }
ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves", rev = "efefa209d677813c9b30ee4a0763b3f63abdeceb" }
ark-bw6-761 = { git = "https://github.com/arkworks-rs/curves", rev = "efefa209d677813c9b30ee4a0763b3f63abdeceb" }
ark-relations = {git = "https://github.com/arkworks-rs/snark", branch = "sync-algebra" }
ark-snark = { git = "https://github.com/arkworks-rs/snark", branch = "sync-algebra" }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge", rev = "2d5f91b19ff6d3d3e9b293a3f531ad7595e2aa78" }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives" }
ark-algebra-test-templates = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
ark-test-curves = { git = "https://github.com/arkworks-rs/algebra", rev = "ba9f533f51d55682c186200a9bd8aaf1d5db1a1b" }
